# repo2string

./: .coveragerc  .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
.github/workflows/: ci.yml  publish.yml  release-and-publish.yml  release.yml
repo2string/: __init__.py  __main__.py  cli.py  scan.py  ui.html  ui_server.py
tests/: .env  test_repo2string.py  test_ui.py
