[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo2string"
version = "0.1.2"
description = "Turn a repository's tracked files into a single text for LLM context (with token counts)."
readme = "readme.md"
requires-python = ">=3.7"
authors = [
  { name="Maciej Szulc", email="szulcmaciej1@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: General"
]
keywords = ["llm", "chatgpt", "repository", "context", "tokens", "clipboard"]
dependencies = [
  "pyperclip",
  "pathspec",
  "tiktoken"
]

[project.urls]
"Homepage" = "https://github.com/szulcmaciej/repo2string"
"Bug Tracker" = "https://github.com/szulcmaciej/repo2string/issues"

# This makes a console script entry point named `repo2string`
[project.scripts]
repo2string = "repo2string.cli:main"